--- a/templates/about.phtml
+++ b/templates/about.phtml
@@ -2,9 +2,9 @@
 include 'header.phtml';
 ?>
       <div class="content">
-<h1 class="description">Студия веб-дизайна АНАНАС</h1>
 	<div class="description">
-	<p>
+	<h1 class="description">Студия АНАНАС</h1>
+	<p class="d-loadme-about">
 	C тех пор как мы изучили учебник ОПа, мы делаем качественные
     и высокопрофессиональные веб-приложения на PHP, с ипользованием 
     самых современных фреймворков и мощных объекто-ориентированных возможностей
