--- a/templates/frontpage.phtml
+++ b/templates/frontpage.phtml
@@ -20,11 +20,11 @@ include 'header.phtml';
       </div>
       <div class="alert alert-info fade in">
         <button type="button" class="close" data-dismiss="alert">&times;</button>
-        Максимальный размер загружаемого файла - <?= $maxFileSize/(1000*1000) ?> Mб 
+        Максимальный размер загружаемого файла - <?= round($maxFileSize/(1024*1024)) ?> Mб 
       </div>
     <? endif; ?>
     <div id="upload_progress" class="progress progress-striped active">
-    <div class="bar" style="width: 0%;"></div>
+    <div class="bar"></div>
     </div>
   </div>
 <script type="text/javascript">
@@ -46,14 +46,18 @@ $(function() {
  });
 });
 /*
+$.ajaxSetup({ cache: false });
+
 var t;
 progress = function(){
     $.ajax({
         url: '/upload-progress',
         dataType: 'json',
+        cache: false,
+        data: new Date().getTime(),
         success: function(data){
-            if(data.percent) {
-                 $('.bar', '#upload-progress').css('width', data.percent+'%');
+            if(data['percent']) {
+                 $('.bar', '#upload-progress').css('width', data['percent']+'%');
             }
         }
     });
@@ -71,10 +75,7 @@ $(function() {
         beforeSubmit: function() {
             $('button[type="submit"]').button('loading');
             $('#upload_progress').show();
-            t = setTimeout(function go() {
-                  progress();
-                  setTimeout(go, 300);
-                }, 300);
+            t = setInterval("progress()", 200);
         }
    });
 
