--- a/templates/details.phtml
+++ b/templates/details.phtml
@@ -27,6 +27,9 @@ include 'header.phtml';
   <div class="controls">
     <textarea name="description" id="description"></textarea>
   </div>
+</div>
+    <div class="alert alert-info">
+<strong>Подсказка:</strong> Нажмите "Отмена", если не хотите редактировать описание.
 </div> 
 </div>
 <div class="modal-footer">
