--- a/templates/header.phtml
+++ b/templates/header.phtml
@@ -7,6 +7,7 @@
 <link href="/vendor/bootstrap/css/bootstrap.css" rel="stylesheet">
 <style>body{padding-top:60px; }</style>
 <link href="/vendor/bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
+<link rel="stylesheet" type="text/css" href="/styles/jquery-ui-1.10.3.custom.css">
 <link type="text/css" href="/vendor/jPlayer/skin/jplayer.blue.monday.css" rel="stylesheet" />
 <link rel="stylesheet" type="text/css" href="/styles/main.css">
 <!--[if lt IE 9]>
